--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Tinyone</title>
     <!-- Its for font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -19,21 +19,294 @@
     <!-- heade & Nav ber area start -->
     <header class="header-part">
         <div class="container">
-            <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-expand-lg navbar-light ">
+                        <a class="navbar-brand" href="#">
+                            <!--Insart your logo and brand start -->
+                            <img src="img/logo.png" alt="Imge Not Found" class="img-fluid"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
 
+                        <div class="collapse manu navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Features<span class="sr-only">(current)</span></a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Support</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Blog</a>
+                                </li>
+
+                            </ul>
+
+                        </div>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
 
     <!-- heade & Nav ber area end -->
+    <!-- slider / banner part start -->
+    <section class="slider-part">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <!-- single item 1 -->
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <!-- Its for slider conternt -->
+                                    <div class="col-lg-5">
+                                        <div class="inspire">
+                                            <h1>Inspire your inspiration</h1>
+                                            <h3>Simple to use for your app, products showcase and your inspiration</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros
+                                                porta lobortis sit </p>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fab fa-apple"></i></a>
+                                                </li>
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fas fa-robot"></i></a>
+                                                </li>
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fab fa-windows"></i></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <!-- Its for slider imge -->
+                                    <div class="offset-lg-2 col-lg-5">
+                                        <div class="slider-img">
+                                            <img src="img/tab.png" alt="Imge Not Found" class="img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
 
+
+                            <!-- single item 2 -->
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <!-- Its for slider conternt 2-->
+                                    <div class="col-lg-5">
+                                        <div class="inspire">
+                                            <h1>Inspire your inspiration</h1>
+                                            <h3>Simple to use for your app, products showcase and your inspiration</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros
+                                                porta lobortis sit </p>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fab fa-apple"></i></a>
+                                                </li>
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fas fa-robot"></i></a>
+                                                </li>
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fab fa-windows"></i></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <!-- Its for slider imge 2-->
+                                    <div class="offset-lg-2 col-lg-5">
+                                        <div class="slider-img">
+                                            <img src="img/tab.png" alt="Imge Not Found" class="img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single item 3 -->
+                            <div class="carousel-item ">
+                                <!-- Its for slider conternt 3-->
+                                <div class="col-lg-5">
+                                    <div class="inspire">
+                                        <h1>Inspire your inspiration</h1>
+                                        <h3>Simple to use for your app, products showcase and your inspiration</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros
+                                            porta lobortis sit </p>
+                                        <ul class="list-inline">
+                                            <li class="list-inline-item">
+                                                <a href="#"><i class="fab fa-apple"></i></a>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <a href="#"><i class="fas fa-robot"></i></a>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <a href="#"><i class="fab fa-windows"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <!-- Its for slider imge 3-->
+                                <div class="offset-lg-2 col-lg-5 ">
+                                    <div class="slider-img">
+                                        <img src="img/tab.png" alt="Imge Not Found" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- slider / banner end -->
+    <!-- features & service part start -->
+    <section class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 m-auto">
+                    <div class="features-titel text-center">
+                        <h2>Tinyone features</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- service part start -->
+            <div class="row text-center">
+                <!-- single item -->
+                <div class="col-md-4">
+                    <div class="our-service">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="icon">
+                                    <i class="fas fa-tablet-alt"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="icon-content">
+                                    <h1>Fully Responsive</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- single item-2 -->
+                <div class="col-md-4">
+                    <div class="our-service">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="icon">
+                                    <i class="fas fa-laptop"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="icon-content">
+                                    <h1>Fully Layered PSD</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- single item-3 -->
+                <div class="col-md-4">
+                    <div class="our-service">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="icon">
+                                    <i class="far fa-folder"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="icon-content">
+                                    <h1>Font Awesome Icons</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- single item-4 -->
+                <div class="col-md-4">
+                    <div class="our-service">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="icon">
+                                    <i class="fas fa-code"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="icon-content">
+                                    <h1>HTML3 & CSS3 </h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- single item-5 -->
+                <div class="col-md-4">
+                    <div class="our-service">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="icon">
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="icon-content">
+                                    <h1>Email Template</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- single item-6 -->
+                <div class="col-md-4">
+                    <div class="our-service">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="icon">
+                                    <i class="far fa-bookmark"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="icon-content">
+                                    <h1>Free to download</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- service part end -->
+
+
+
+        </div>
+        </div>
+    </section>
+    <!-- features & service part end -->
 
 
 
 
     <!-- for js file -->
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="js/coustom.js"></script>
 </body>
