--- a/index.html
+++ b/index.html
@@ -96,9 +96,6 @@
                                     </div>
                                 </div>
                             </div>
-
-
-
                             <!-- single item 2 -->
                             <div class="carousel-item">
                                 <div class="row">
@@ -132,38 +129,38 @@
                                 </div>
                             </div>
                             <!-- single item 3 -->
-                            <div class="carousel-item ">
-                                <!-- Its for slider conternt 3-->
-                                <div class="col-lg-5">
-                                    <div class="inspire">
-                                        <h1>Inspire your inspiration</h1>
-                                        <h3>Simple to use for your app, products showcase and your inspiration</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros
-                                            porta lobortis sit </p>
-                                        <ul class="list-inline">
-                                            <li class="list-inline-item">
-                                                <a href="#"><i class="fab fa-apple"></i></a>
-                                            </li>
-                                            <li class="list-inline-item">
-                                                <a href="#"><i class="fas fa-robot"></i></a>
-                                            </li>
-                                            <li class="list-inline-item">
-                                                <a href="#"><i class="fab fa-windows"></i></a>
-                                            </li>
-                                        </ul>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <!-- Its for slider conternt 2-->
+                                    <div class="col-lg-5">
+                                        <div class="inspire">
+                                            <h1>Inspire your inspiration</h1>
+                                            <h3>Simple to use for your app, products showcase and your inspiration</h3>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis. Proin viverra risus a eros volutpat tempor. In quis arcu et eros
+                                                porta lobortis sit </p>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fab fa-apple"></i></a>
+                                                </li>
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fas fa-robot"></i></a>
+                                                </li>
+                                                <li class="list-inline-item">
+                                                    <a href="#"><i class="fab fa-windows"></i></a>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
-
-                                <!-- Its for slider imge 3-->
-                                <div class="offset-lg-2 col-lg-5 ">
-                                    <div class="slider-img">
-                                        <img src="img/tab.png" alt="Imge Not Found" class="img-fluid">
+                                    <!-- Its for slider imge 2-->
+                                    <div class="offset-lg-2 col-lg-5">
+                                        <div class="slider-img">
+                                            <img src="img/tab.png" alt="Imge Not Found" class="img-fluid">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -183,7 +180,7 @@
                 </div>
             </div>
             <!-- service part start -->
-            <div class="row text-center">
+            <div class="row service">
                 <!-- single item -->
                 <div class="col-md-4">
                     <div class="our-service">
@@ -208,7 +205,7 @@
                         <div class="row">
                             <div class="col-md-2">
                                 <div class="icon">
-                                    <i class="fas fa-laptop"></i>
+                                    <i class="fas fa-lemon"></i>
                                 </div>
                             </div>
                             <div class="col-md-10">
@@ -294,19 +291,118 @@
                 </div>
             </div>
             <!-- service part end -->
-
-
-
         </div>
         </div>
     </section>
     <!-- features & service part end -->
-
+    <!-- contect part start -->
+    <section class="contect">
+        <div class="container">
+            <!-- content title -->
+            <div class="row">
+                <div class="col-md-10 m-auto">
+                    <div class="contect-titel text-center">
+                        <h1>Keep in touch with us</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- ITs for form part start -->
+            <div class="row">
+                <div class="col-md-10 m-auto">
+                    <form action="#">
+                        <div class="row coustom-size ">
+                            <!-- Its for input -->
+                            <div class="col-md-9">
+                                <div class="form-group my-input">
+                                    <input type="email" class="form-control" placeholder="Enter your email to updet">
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-3">
+                                <div class="my-button">
+                                    <button type="submit" class="btn ">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- social icon start -->
+            <div class="row">
+                <div class="col-md-12 m-auto">
+                    <div class="social-media text-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- social icon end -->
+        </div>
+    </section>
+    <!-- contect part end -->
+    <!-- footer area start -->
+    <footer class="footer-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-3 col-3">
+                    <address>
+                        HALOVIETNAM LTD <br>
+                        66, Dang Van ngu, Dong Da <br>
+                        Hanoi, Vietnam
+                        <p>contact@halovietnam.com</p>
+                        <p>+844 35149182</p>
+                    </address>
+                </div>
+                <div class="col-md-2 col-sm-2 col-2">
+                    <ul class="list-inline">
+                        <li><a href="#">Examples</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">License</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-sm-2 col-2">
+                    <ul class="list-inline">
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Terms</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-sm-2 col-2">
+                    <ul class="list-inline">
+                        <li><a href="#">Download</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Documents</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-sm-2 col-2">
+                    <ul class="list-inline">
+                        <li><a href="#">Media</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">DForums</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer area end -->
 
 
 
     <!-- for js file -->
     <script src="js/jquery-3.5.1.min.js"></script>
-    <!-- <script src="js/bootstrap.min.js"></script> -->
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/coustom.js"></script>
 </body>
